feat(tests): Add phpunit and make tests for 2 base classes.

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
         "psr-4": {
             "Money\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
