--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Simple money library for PHP.",
     "type": "library",
     "license": "MIT",
+    "version": "0.1.0",
     "authors": [
         {
             "name": "Taras D",
