--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php" : "^7.3",
         "ext-gmp" : "*",
         "ext-json" : "*",
-        "phpunit/phpunit": "^9.1@dev"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload" : {
         "psr-4": {
