--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,25 @@
     "description": "Simple money library for PHP.",
     "type": "library",
     "license": "MIT",
-    "keywords": ["money", "library", "currency", "cryptocurrency"],
+    "keywords": [
+        "money",
+        "library",
+        "currency",
+        "cryptocurrency"
+    ],
     "authors": [
         {
             "name": "Taras D",
             "email": "td@hrom.fund"
         }
     ],
-    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php" : "^7.3",
-        "ext-gmp" : "*",
-        "ext-json" : "*",
-        "phpunit/phpunit": "^9.0"
+        "brick/math": "^0.8.15"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0",
     },
     "autoload" : {
         "psr-4": {
