--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "brick/math": "^0.8.15"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload" : {
         "psr-4": {
